oldMeta/Ts/unpackaged/Telangana/objects/Pahani__c.object
<CustomObject>
    <description>It contains the record information of lands</description>
    <fields>
        <fullName>Adhaar_Number__c</fullName>
        <label>Adhaar Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>District</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandal__c</fullName>
        <label>Mandal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>District__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Kamareddy</fullName>
                </value>
                <value>
                    <fullName>Bodhan</fullName>
                </value>
                <value>
                    <fullName>Makloor</fullName>
                </value>
                <value>
                    <fullName>Nizamabad</fullName>
                </value>
                <value>
                    <fullName>Nizamsagar</fullName>
                </value>
                <value>
                    <fullName>Karimnagar</fullName>
                </value>
                <value>
                    <fullName>Jagityal</fullName>
                </value>
                <value>
                    <fullName>Medak</fullName>
                </value>
                <value>
                    <fullName>Sangareddy</fullName>
                </value>
                <value>
                    <fullName>Patancherru</fullName>
                </value>
                <value>
                    <fullName>Siddipet</fullName>
                </value>
                <value>
                    <fullName>Adilabad</fullName>
                </value>
                <value>
                    <fullName>Bhainsa</fullName>
                </value>
                <value>
                    <fullName>Mancherial</fullName>
                </value>
                <value>
                    <fullName>Rangareddy</fullName>
                </value>
                <value>
                    <fullName>Chevella</fullName>
                </value>
                <value>
                    <fullName>Ghatkesar</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Golconda</fullName>
                </value>
                <value>
                    <fullName>Bahadurpura</fullName>
                </value>
                <value>
                    <fullName>Mahabubnagar</fullName>
                </value>
                <value>
                    <fullName>Achampet</fullName>
                </value>
                <value>
                    <fullName>Gadwal</fullName>
                </value>
                <value>
                    <fullName>Warangal</fullName>
                </value>
                <value>
                    <fullName>Hanmakonda</fullName>
                </value>
                <value>
                    <fullName>Govindaropet</fullName>
                </value>
                <value>
                    <fullName>Khammam</fullName>
                </value>
                <value>
                    <fullName>Singareni</fullName>
                </value>
                <value>
                    <fullName>Bhadrachalam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passbook_Number__c</fullName>
        <label>Passbook Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register_ID__c</fullName>
        <label>Register ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mandal__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Shabdipur</fullName>
                </value>
                <value>
                    <fullName>Raghavapur</fullName>
                </value>
                <value>
                    <fullName>Saloora</fullName>
                </value>
                <value>
                    <fullName>Rudrur</fullName>
                </value>
                <value>
                    <fullName>Gutpa</fullName>
                </value>
                <value>
                    <fullName>Makloor</fullName>
                </value>
                <value>
                    <fullName>Ankapur</fullName>
                </value>
                <value>
                    <fullName>Perkit</fullName>
                </value>
                <value>
                    <fullName>Boorgul</fullName>
                </value>
                <value>
                    <fullName>Mallur</fullName>
                </value>
                <value>
                    <fullName>Chegurti</fullName>
                </value>
                <value>
                    <fullName>Lakshmipur</fullName>
                </value>
                <value>
                    <fullName>Chelgal</fullName>
                </value>
                <value>
                    <fullName>Kalleda</fullName>
                </value>
                <value>
                    <fullName>Anathasagar</fullName>
                </value>
                <value>
                    <fullName>Suklapet</fullName>
                </value>
                <value>
                    <fullName>Arutla</fullName>
                </value>
                <value>
                    <fullName>Byathole</fullName>
                </value>
                <value>
                    <fullName>Kyasaram</fullName>
                </value>
                <value>
                    <fullName>Pashamylaram</fullName>
                </value>
                <value>
                    <fullName>Nacharpalle</fullName>
                </value>
                <value>
                    <fullName>Venkatapur</fullName>
                </value>
                <value>
                    <fullName>Belluri</fullName>
                </value>
                <value>
                    <fullName>Waghapur</fullName>
                </value>
                <value>
                    <fullName>Thimmapur</fullName>
                </value>
                <value>
                    <fullName>Watoli</fullName>
                </value>
                <value>
                    <fullName>Nagaram</fullName>
                </value>
                <value>
                    <fullName>Pochammapad</fullName>
                </value>
                <value>
                    <fullName>Ibrahimpally</fullName>
                </value>
                <value>
                    <fullName>Edulabad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pahani</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PID-{00}</displayFormat>
        <label>Pahani ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pahani</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Addhar_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or( not(ISNUMBER( Adhaar_Number__c )), LEN(Adhaar_Number__c )&lt;12)</errorConditionFormula>
        <errorDisplayField>Adhaar_Number__c</errorDisplayField>
        <errorMessage>Enter the Adhaar Number in 12 digits only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pahani_Reg_Id_rule</fullName>
        <active>true</active>
        <description>it should b entered in format like RD-11</description>
        <errorConditionFormula>or(NOT( Register_ID__c ==  UPPER( Register_ID__c ) ), (not( CONTAINS(Register_ID__c,&apos;-&apos;))))</errorConditionFormula>
        <errorDisplayField>Register_ID__c</errorDisplayField>
        <errorMessage>it should b entered in format like RD-11 (first two letters are capital)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Passbook_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not( ISNUMBER( Passbook_Number__c ) ), LEN( Passbook_Number__c )&lt;5)</errorConditionFormula>
        <errorDisplayField>Adhaar_Number__c</errorDisplayField>
        <errorMessage>Enter the passbook Number of 5 digits</errorMessage>
    </validationRules>
</CustomObject>